fix: added animations and fixed spacing from story section to rsvp

--- a/styles.css
+++ b/styles.css
@@ -299,6 +299,9 @@ li {
 .rsvp-container{
 	background-color:#e0bfb8;
 	padding: 50px 0;
+	position: relative;
+	z-index: 1;
+	margin-top: -10px;
 }
 
 .rsvp-container-title{
